--- a/index.html
+++ b/index.html
@@ -422,8 +422,13 @@
 <p class="text-gray-400 text-center p-6 hidden" id="no-overdue-members-message">No members are currently overdue. Great job!</p>
 </div>
 <!-- Members List (Moved Down) -->
-<h2 class="text-2xl font-bold text-white mb-4 mt-8 text-lg">Current Members (<span id="total-members-count">0</span>)</h2>
-<div class="overflow-x-auto rounded-xl shadow-lg border border-gray-700" id="members-list-container">
+<div class="flex items-center justify-between mb-4 mt-8">
+    <h2 class="text-2xl font-bold text-white text-lg">Current Members</h2>
+    <button id="toggle-members-btn" class="px-4 py-2 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-150 ease-in-out text-sm">
+        Show Current Members (<span id="total-members-count">0</span>)
+    </button>
+</div>
+<div class="overflow-x-auto rounded-xl shadow-lg border border-gray-700 hidden" id="collapsible-members">
 <table class="min-w-full divide-y divide-gray-700 w-full block overflow-auto text-sm">
 <thead class="bg-indigo-900">
 <tr>
@@ -656,6 +661,11 @@
         // Double tap detection variables
         let lastTap = 0;
         const TAP_THRESHOLD = 300; // milliseconds
+
+        // Toggle Member List
+        const toggleBtn = document.getElementById('toggle-members-btn');
+        const collapsibleMembersSection = document.getElementById('collapsible-members');
+
 
         /**
          * Formats a date string from YYYY-MM-DD to DD-MM-YYYY.
@@ -927,10 +937,17 @@
             const searchTerm = searchInput.value.toLowerCase();
             const filterStatus = filterStatusSelect.value;
 
-            
-    document.getElementById('total-members-count').textContent = allMembers.length;
+            // Update the total members count on the button
+            document.getElementById('total-members-count').textContent = allMembers.length;
+            // Update the toggle button text based on visibility
+            if (collapsibleMembersSection.classList.contains('hidden')) {
+                toggleBtn.textContent = `Show Current Members (${allMembers.length})`;
+            } else {
+                toggleBtn.textContent = 'Hide Current Members';
+            }
 
-const filteredAndSortedMembers = allMembers.filter(member => {
+
+            const filteredAndSortedMembers = allMembers.filter(member => {
                 const matchesSearch = (member.name && member.name.toLowerCase().includes(searchTerm)) ||
                                       (member.memberId && member.memberId.toLowerCase().includes(searchTerm)) ||
                                       (member.phoneNumber && member.phoneNumber.toLowerCase().includes(searchTerm)) ||
@@ -1162,7 +1179,6 @@ const filteredAndSortedMembers = allMembers.filter(member => {
             addPaymentMemberSearchInput.value = ''; // Clear search input
             addPaymentMemberSelect.innerHTML = '<option value="">-- Select a Member --</option>'; // Clear and reset options
             addPaymentCurrentDueDateInput.value = '';
-            addPaymentMembershipTypeInput.value = 'Monthly';
             addPaymentNewDueDateInput.value = '';
         }
 
@@ -1862,7 +1878,6 @@ const filteredAndSortedMembers = allMembers.filter(member => {
             }
 
             try {
-                let docRef;
                 let photoURL = null; // Initialize photoURL
 
                 // Handle photo upload if a new photo is present
@@ -2183,7 +2198,8 @@ document.addEventListener('DOMContentLoaded', function() {
         });
 
         // Set initial button text
-        toggleBtn.textContent = 'Show Current Members (' + document.getElementById('total-members-count').textContent + ')';
+        // This will be set by renderMembers() function after data is loaded
+        // toggleBtn.textContent = 'Show Current Members (' + document.getElementById('total-members-count').textContent + ')';
     }
 });
 </script></body>
